# hview

./: .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md
backend/: Cargo.toml
backend/src/: config.rs  dir.rs  main.rs
backend/src/app/: fs.rs  mod.rs  responder.rs
backend/test-fixtures/imgs/.th/: Free_Green_Nature_Border_Frame_Creative_Commons_(4768791113).jpg.avif  Great_nature_landscape_Pakistan.jpg.avif  flower.jpg.avif  turtle.jpg.avif
backend/test-fixtures/imgs/subimg/.th/: 24701-nature-natural-beauty.jpg.avif  FireFlies_short_video.webm.avif  elephant.jpg.avif
backend/test-sample/imgs/.th/: scotland-1761292_1920.jpg.avif
frontend/: Cargo.toml  index.html
frontend/etc/: default.conf.template
frontend/src/: main.rs
frontend/src/components/: entry.rs  mod.rs  modal.rs  page.rs
frontend/static/: style.css
src/: config.rs  main.rs
src/app/: config.rs  fs.rs  hrocket.rs  mod.rs  pathbuf.rs  responder.rs
src/hview/: mod.rs
templates/: dir.hbs  dir.html.tera  dir.tera  script.js
test-sample/imgs/.th/: glasgow.JPG.avif
test-sample/imgs/subimg/.th/: elephant-1822636_1920.jpg.avif
