[package]
name = "hview"
version = "0.1.0"
authors = ["Steven Bower <bowerblu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
thiserror = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates"]
