[package]
name = "hview-backend"
version = "0.1.0"
authors = ["Steven Bower <bowerblu@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
structopt = "0.3"
thiserror = "1.0"
rand = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
