[package]
name = "hview-backend"
version = "0.1.0"
authors = ["Steven Bower <bowerblu@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
structopt = "0.3"
thiserror = "1.0"
rand = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
actix-web = "3.3"
actix-files = "0.5"
env_logger = "0.9"
alphanumeric-sort = "1.4"
